Add dark mode support

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>ZeroWait: Asistente Gastronómico Inteligente</h1>
+  <button id="toggleDark" style="float:right">Modo Oscuro</button>
   <div id="contenedor-video" style="position: relative; display: inline-block;">
     <video id="video" width="720" height="560" autoplay muted></video>
   </div>
