--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button id="toggleDark">Modo Oscuro</button>
   <h1>ZeroWait: Asistente Gastronómico Inteligente</h1>
   <div id="contenedor-video" style="position: relative; display: inline-block;">
     <video id="video" width="720" height="560" autoplay muted></video>
